2011-02-23  Werner Koch  <wk@g10code.com>

	* acinclude.m4 (AM_PATH_GPG_ERROR): Remove.

2011-02-21  Werner Koch  <wk@g10code.com>

	Release 1.5.0-beta1.

2011-02-18  Werner Koch  <wk@g10code.com>

	* configure.ac [GCC]: Remove the use of -fno-strict-aliasing.

2011-02-11  Werner Koch  <wk@g10code.com>

	* configure.ac: Add option --disbale-aesni-support.
	(ENABLE_AESNI_SUPPORT): New macro.

2011-02-04  Werner Koch  <wk@g10code.com>

	* autogen.sh: Install the git pre-commit if not yet done.

2010-12-23  Werner Koch  <wk@g10code.com>

	* configure.ac (BUILD_REVISION): Use git_revision.

2010-08-19  Werner Koch  <wk@g10code.com>

	* configure.ac: Define GPG_ERR_ENABLE_ERRNO_MACROS. Remove
	definition of _GNU_SOURCE.
	(AC_GNU_SOURCE): New.

2010-08-16  Werner Koch  <wk@g10code.com>

	* configure.ac (INSERT_SYS_SELECT_H): New.

2010-07-09  Werner Koch  <wk@g10code.com>

	* configure.ac: Bump LT version to C18/A7/R0 to prepare a backport
	of a new API to the 1.4 series.

2010-04-19  Marcus Brinkmann  <marcus@g10code.de>

	* configure.ac: Check for -fno-strict-aliasing.

2010-04-12  Brad Hards  <bradh@frogmouth.net>  (wk)

	* configure.ac: Print more verbose info at the end.

2010-03-24  Werner Koch  <wk@g10code.com>

	* configure.ac (USE_RNDW32CE): New.

2010-03-15  Werner Koch  <wk@g10code.com>

	* configure.ac (emacs_local_vars_begin)
	(emacs_local_vars_read_only, emacs_local_vars_end): New.

2010-01-21  Werner Koch  <wk@g10code.com>

	* compat/Makefile.am: New.
	* compat/compat.c: New.
	* compat/libcompat.h: New.
	* compat/getpid.c, compat/clock.c: New.

	* configure.ac: Require libgpg-error 1.8.
	(HAVE_W32CE_SYSTEM): New am_defines and am_conditionals.
	(getpid): Check for replacement function.
	(AC_CONFIG_LIBOBJ_DIR): New.
	(AC_TYPE_PID_T): New.
	(AM_INIT_AUTOMAKE): Use modern variant.
	(AC_CONFIG_FILES): Add compat/Makfile.
	* autogen.sh: Support W32CE.
	* ltmain.sh: Update to 2.2.6b
	(wrappers_required): Don't set for mingw32ce.