@@ -1,5 +1,7 @@
 2011-02-23  Werner Koch  <wk@g10code.com>
 
+	* configure.ac (LIBGCRYPT_CONFIG_HOST): New.
+
 	* acinclude.m4 (AM_PATH_GPG_ERROR): Remove.
 
 2011-02-21  Werner Koch  <wk@g10code.com>
